# SteamFun

./: .dockerignore  .gitattributes  .gitignore  CLOUDFRONT_IMPLEMENTATION_SUMMARY.md  COMPLETE_INTEGRATION_SUCCESS.md  Dockerfile  FULL_WORKFLOW_GUIDE.md  LANGGRAPH_CLI_README.md  LANGGRAPH_SUCCESS.md  LICENSE  MEDIACONVERT_IMPLEMENTATION_SUMMARY.md  README.md  STUDIO_INTEGRATION_SUMMARY.md  TASK_4_2_IMPLEMENTATION.md  backend_analysis.md  create_embeddings.py  create_embeddings_jina.py  docker-compose.prod.yml  docker-compose.yml  evaluate.py  final_rag_validation.py  generate_video.py  gradio_app.py  improved_planner_agent.py  langgraph.json  langgraph_cli_helper.py  provider.py  pyproject.toml  pytest.ini  requirements.txt  run_langgraph_agents.py  run_video_generation.py  setup.py  setup_langgraph.py  suppress_warnings_startup.py  test_agent_interface.py  test_dynamic_forms.py  validate_studio_setup.py
.kiro/settings/: mcp.json
.kiro/specs/aws-s3-langgraph-integration/: design.md  requirements.md  tasks.md
.kiro/specs/fastapi-project-restructure/: design.md  (+2 more)
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
app/: __init__.py  main.py
app/api/: __init__.py  dependencies.py
app/config/: README.md  __init__.py  cli.py  database.py  environments.py  example.py  factory.py  settings.py  validation.py
app/core/: __init__.py
app/services/: __init__.py  agent_service.py  aws_service.py  rag_service.py  video_service.py
app/utils/: __init__.py  exceptions.py  helpers.py  logging.py  logging_config.py  monitoring.py  security.py  validators.py
chroma_db/: chroma.sqlite3
chroma_db/manim_core_enhanced/: chroma.sqlite3
config/: system_config.json
config/schema/: workflow_config_schema.json  workflow_config_schema.yaml
config/templates/: development.yaml  production.yaml  staging.yaml
data/thb_easy/: chemistry.json  comp_sci.json  math.json  physics.json
data/thb_hard/: chemistry.json  comp_sci.json  math.json  physics.json
data/thb_medium/: chemistry.json  comp_sci.json  math.json  physics.json
demo_output/: session_id.txt
demo_output/python_variables_basics/: python_variables_basics_scene_outline.txt
eval_suite/: image_utils.py  parse_prompt.py  text_utils.py  utils.py  video_utils.py
eval_suite/prompts_raw/: __init__.py  fix_transcript.txt  image_eval.txt  text_eval_new.txt  video_eval_new.txt
examples/: agent_debugging_demo.py  agent_output_capture_demo.py  agent_testing_usage.py  aws_integration_usage.py  checkpointing_usage.py  cloudfront_cdn_usage.py  comprehensive_monitoring_demo.py  comprehensive_validation_usage.py  config_hot_reload_usage.py  config_manager_usage.py  config_service_usage.py  config_usage.py  config_validation_usage.py  enhanced_code_generator_usage.py  enhanced_test_data_scenario_demo.py  mediaconvert_transcoding_usage.py  migration_usage.py  multipart_upload_usage.py  real_time_monitoring_demo.py  s3_code_storage_usage.py  s3_video_upload_usage.py  security_usage.py  simple_migration_demo.py  standalone_migration_demo.py  studio_workflow_testing_demo.py
generated_videos/: session_id.txt
generated_videos/d_erivative/: d_erivative_scene_outline.txt
mllm_tools/: gemini.py  litellm.py
scripts/: deploy_development.sh  deploy_production.sh  init_rds_database.py  manage_db.py  run_migration.py  test_deployment.py
src/aws/: README.md  __init__.py  aws_integration_service.py  dynamodb_metadata.py  logging_config.py  metadata_service.py  multipart_upload_handler.py  s3_code_storage.py  s3_video_upload.py  task_4_2_completion_summary.md  task_5_completion_summary.md  test_dynamodb_metadata.py  test_enhanced_code_generator.py  test_enhanced_simple.py  test_foundation.py  test_metadata_service.py  test_metadata_service_simple.py  test_minimal.py  test_multipart_upload_handler.py  test_s3_code_storage.py  test_s3_video_upload.py  verify_foundation.py  verify_metadata_service.py  verify_multipart_upload_handler.py  verify_s3_code_storage.py  verify_s3_video_upload.py  verify_task_3_2_completion.py  verify_task_4_2_completion.py  verify_task_4_2_simple.py
src/core/: video_planner.py
src/langgraph_agents/: README_ENHANCED_AGENTS.md  __init__.py  base_agent.py  config.py  full_workflow.py  graph.py  routing.py  simple_workflow.py  state.py  test_enhanced_agents.py  test_enhanced_agents_simple.py  verify_task_4_completion.py  workflow.py  workflow_graph.py
src/rag/: advanced_result_processing.py  chunk_relationships.py  context_aware_retrieval.py  embedding_provider_factory.py  embedding_providers.py  error_handling.py  jina_embedding_provider.py  local_embedding_provider.py  metadata_utils.py  plugin_detection.py  provider_factory.py  quality_monitor.py  query_generation.py  rag_system_evaluation.py  rag_system_validation.py  result_types.py  semantic_query_expansion.py  vector_store_factory.py
src/test_ui/: __init__.py  api_client.py  config_manager.py  config_ui.py  demo_workflow_interface.py  dynamic_forms.py  error_handling.py  gradio_test_frontend.py  requirements.txt  test_workflow_interface.py  validation.py  websocket_client.py
src/utils/: allowed_models.json
test_output/: session_id.txt
test_output/basic_addition/: basic_addition_scene_outline.txt
tests/: __init__.py  conftest.py
tests/e2e/: README.md  __init__.py  test_complete_workflow.py  test_failure_recovery.py  test_human_loop_scenarios.py  test_performance_benchmarking.py  test_runner.py
tests/integration/: README.md  test_agent_communication.py  test_checkpointing.py  test_comprehensive_integration.py  test_error_propagation.py  test_migration_process.py  test_state_management.py  test_studio_workflow_testing.py  test_tool_integration.py  test_workflow_graph.py  test_workflow_graph_construction.py
tests/unit/: __init__.py  test_base_agent.py  test_code_generator_agent.py  test_error_handler_agent.py  test_planner_agent.py  test_rag_agent.py  test_routing.py  test_runner.py
tests/utils/: config_mocks.py  config_validation_tests.py
(+1043 files in other folders)
